<resources>
    <string name="app_name">RoboArm</string>
    <string name="title_bluetooth">Bluetooth</string>
    <string name="title_comandos">Comandos</string>
    <string name="title_roboarm">RoboArm</string>
    <string name="scan">Procurar</string>
    <string name="disconnect">Desconectar</string>
    <string name="roboarm">RoboArm</string>
    <string name="button_start">Start</string>
    <string name="button_stop">Stop</string>
    <string name="button_speed1">Speed 1</string>
    <string name="button_speed2">Speed 2</string>
    <string name="servo_base">Base</string>
    <string name="servo_altura">Altura</string>
    <string name="servo_angulo">Ângulo</string>
    <string name="servo_garra">Garra</string>
    <string name="_0angle">0°</string>
    <string name="_180angle">180°</string>
</resources>