<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.roboarm.RoboArmFragment">

    <TextView
        android:id="@+id/textServoGarra"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:contentDescription="@string/servo_garra"
        android:text="@string/servo_garra"
        android:textSize="32sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/seekBarServoAngulo"
        tools:text="@string/servo_garra" />

    <SeekBar
        android:id="@+id/seekBarServoGarra"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textServoGarra" />

    <TextView
        android:id="@+id/textServoAngulo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:contentDescription="@string/servo_angulo"
        android:text="@string/servo_angulo"
        android:textSize="32sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/seekBarServoAltura"
        tools:text="@string/servo_angulo" />

    <SeekBar
        android:id="@+id/seekBarServoAngulo"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:labelFor="@id/textServoAngulo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textServoAngulo" />

    <TextView
        android:id="@+id/textServoAltura"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:contentDescription="@string/servo_altura"
        android:text="@string/servo_altura"
        android:textSize="32sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/seekBarServoBase"
        tools:text="@string/servo_altura" />

    <SeekBar
        android:id="@+id/seekBarServoBase"
        style="@style/Widget.AppCompat.SeekBar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:labelFor="@id/textServoBase"
        android:max="180"
        android:progress="1"
        android:scrollbarSize="32dp"
        android:scrollbarStyle="outsideInset"
        android:theme="@style/Theme.RoboArm"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textServoBase"
        tools:targetApi="lollipop" />

    <TextView
        android:id="@+id/textServoBase"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="48sp"
        android:contentDescription="@string/servo_base"
        android:text="@string/servo_base"
        android:textSize="32sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="SpeakableTextPresentCheck"
        tools:text="@string/servo_base" />

    <SeekBar
        android:id="@+id/seekBarServoAltura"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:labelFor="@id/textServoAltura"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textServoAltura" />

</androidx.constraintlayout.widget.ConstraintLayout>